# emptyCMakeTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: gtest.cmake  nlohmann_json.cmake
